try to fix the bug when the nav is too high

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1672,6 +1672,10 @@ div.api-resource .social-resource .author {
   margin-top: 20px;
   padding-bottom: 0px;
 }
+.container.api .side-bar-parent {
+  width: 258px;
+  height: auto;
+}
 .container.api .main,
 .container.api .side-bar {
   margin-top: 0;
@@ -1696,10 +1700,12 @@ div.api-resource .social-resource .author {
 }
 .container.docs .side-bar-parent {
   width: 260px;
+  margin-top: 20px;
+  height: auto;
 }
 .container.docs .side-bar {
-  margin-top: 20px;
   background-color: #fff;
+  width: 258px;
   border: 1px solid #e9e9e9;
 }
 .container.docs .main {
